--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 SECRET_KEY=your_secret_key
-DB_NAME=your_db_name
+DB_NAME=your_db_name # insert previously used django database name
 DB_USER=your_db_user
 DB_PASSWORD=your_db_user_password
 DB_HOST=your_host
