--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ DB_USER=your_db_user
 DB_PASSWORD=your_db_user_password
 DB_HOST=your_host
 DB_PORT=your_db_port
+django_project_path='/path_to_your_project/property-manager-django' # insert the path to property-manager-django project in your pc
